<resources>
    <string name="app_name" translatable="false">Cicerone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_error">Error: wrong username or password.</string>
    <string name="logging">Logging in…</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="skip_login">Skip login</string>
    <string name="or">or</string>
    <string name="empty_username_error">Enter your username</string>
    <string name="empty_password_error">Enter your password</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="itinerary_description">Description</string>
    <string name="new_itinerary">Create an itinerary</string>
    <string name="itinerary_title">Title of the itinerary</string>
    <string name="beginning_date">Beginning date</string>
    <string name="ending_date">Ending date</string>
    <string name="maximum_participants">Max participants</string>
    <string name="minimum_participants">Min participants</string>
    <string name="location">Location</string>
    <string name="repetitions">Repetitions per day</string>
    <string name="duration">Duration</string>
    <string name="full_price">Full price</string>
    <string name="reduced_price">Reduced price</string>
    <string name="image_url">Image</string>
    <string name="submit">Submit</string>
    <string name="calendar">Calendar</string>
    <string name="error_insert_beginning_date">Insert beginning date first!</string>
    <string name="wrong_number">Insert a correct number!</string>
    <string name="error_insert_min_part">Insert minimum participants first!</string>
    <string name="separator" translatable="false">:</string>
    <string name="set_as_one">Set this as 1 or change the duration!</string>
    <string name="reservation_date">End reservation date</string>
    <string name="error_insert_ending_date">Insert ending date first!</string>
    <string name="itinerary_added">Itinerary added.</string>
    <string name="error_fields_empty">Please fill every field first.</string>
    <string name="image_profile">Profile Image</string>
    <string name="account" translatable="false">Account</string>
    <string name="itinerary">Itinerary</string>
    <string name="reviews">Reviews</string>
    <string name="avatar" translatable="false">Avatar</string>
    <string name="example_name">Name Surname</string>
    <string name="loading">Loading…</string>
    <string name="sex">Sex:</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="save">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="switch_to_cicerone">Become a Cicerone</string>
    <string name="status">Status: %s</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="example_email" translatable="false">email@email.com</string>
    <string name="example_cellphone" translatable="false">0123456789</string>
    <string name="example_date" translatable="false">dd/mm/yyyy</string>
    <string name="profile_image">Profile image</string>
    <string name="example_number" translatable="false">Nr.#</string>
    <string name="print_integer_number">Nr. %d</string>
    <string name="birth_date">Birth Date</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="review">Review</string>
    <string name="user_type">User Type</string>
    <string name="user_type_cicerone" translatable="false">Cicerone</string>
    <string name="user_type_globetrotter" translatable="false">Globetrotter</string>
    <string name="exit_confirm_answer">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="hours">hh</string>
    <string name="minutes">min</string>
    <string name="answer_switch_to_cicerone">Are you sure you want to switch to Cicerone?</string>
    <string name="error_during_operation">An error occurred during this operation</string>
    <string name="operation_completed">Operation completed successfully!</string>
    <string name="remember_me">Remember me</string>
    <string name="download_your_data">Download your data</string>
    <string name="storage_permission_required">Sorry, we need to storage permission to download the file.</string>
    <string name="external_storage_permission_required_message">Write external storage permission is required.</string>
    <string name="please_grant_permission">Please grant permission</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="request_reservation">Request reservation</string>
    <string name="preview">Preview of the itinerary</string>
    <string name="home" translatable="false">Home</string>
    <string name="discover">Discover</string>
    <string name="wishlist" translatable="false">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="reported_user">Reported user:</string>
    <string name="lorem_ipsum" translatable="false">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="object">"Object: "</string>
    <string name="report_details_title">Report Details</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="pending">Pending</string>
    <string name="canceled">Canceled</string>
    <string name="description">"Description: "</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sure_to_exit">Are you sure you want to exit?</string>
    <string name="confirm_delete">Are you sure you want to delete this itinerary?</string>
    <string name="edit_itinerary">Update itinerary</string>
    <string name="delete_itinerary">Delete itinerary</string>
    <string name="itinerary_deleted">Itinerary deleted.</string>
    <string name="itinerary_updated">Itinerary updated.</string>
    <string name="wishlist_number">You have %d itineraries in your wishlist.</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="insert_feedback">Insert your feedback:</string>
    <string name="insert_description">Insert your description:</string>
    <string name="submit_review">Submit review</string>
    <string name="update_review">Update review</string>
    <string name="delete_review">Delete review</string>
    <string name="added_review">Review added.</string>
    <string name="cellphone">Cellphone:</string>
    <string name="doc_number">Document Number</string>
    <string name="ins_doc_nr">Document Number:</string>
    <string name="modify">Modify</string>
    <string name="ins_doc_type">Document Type:</string>
    <string name="ins_expiry_date">Expiry Date:</string>
    <string name="ins_birth_date">Birth Date:</string>
    <string name="ins_email" translatable="false">E-Mail:</string>
    <string name="ins_name">Name:</string>
    <string name="ins_surname">Surname:</string>
    <string name="doc_type">Document Type</string>
    <string name="updating">Updating…</string>
    <string name="saved">Saved!</string>
    <string name="change_password">Change your password</string>
    <string name="old_password">Current password:</string>
    <string name="change">Change</string>
    <string name="new_password">New password:</string>
    <string name="re_ins_new_pw">Re-enter the new password:</string>
    <string name="notequals">The password does not match the one entered</string>
    <string name="oldpw_equals_new_err">The old password cannot be the same as the new one</string>
    <string name="password_changed">Password changed!</string>
    <string name="oldpw_mism_error">The current password does not match the one entered</string>
    <string name="deleted_review">Review deleted.</string>
    <string name="updated_review">Review updated.</string>
    <string name="no_review">There are no reviews to display.</string>
    <string name="no_insert_review">Sorry! You cannot post a review.</string>
    <string name="clear_wishlist">Clear wishlist</string>
    <string name="wishlist_deleted">Wishlist cleared.</string>
    <string name="confirm_delete_wishlist">Are you sure you want to clear your wishlist?</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="sure_to_delete_account">"Are you sure you want to permanently delete your account? You'll loose all the data connected to your account and there will be no way to recover them. "</string>
    <string name="registration_in_progress">Registration in progress…</string>
    <string name="hi">Hi!</string>
    <string name="welcome_text">Just a few steps and you\'ll be ready to go!</string>
    <string name="ins_username" translatable="false">Username:</string>
    <string name="empty_email_error">Enter your e-mail</string>
    <string name="email_not_valid">Please enter a valid e-mail address</string>
    <string name="username_too_long_error">Username too long!</string>
    <string name="sex_text">Sex</string>
    <string name="fiscal_code">Fiscal Code</string>
    <string name="cellphone_ins">Cellphone</string>
    <string name="next">Next</string>
    <string name="almost_there">We are almost there…</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="great">Great!</string>
    <string name="last_step_text">Last step, we need a identity document and the languages you know</string>
    <string name="known_languages">Known Languages</string>
    <string name="email_too_long">E-mail too long!</string>
    <string name="not_valid_input">The data entered is not valid.</string>
    <string name="username_already_exists">This username already exists.</string>
    <string name="email_already_exists">This e-mail already exists.</string>
    <string name="username_error">Username not valid or too short!</string>
    <string name="document_not_valid">The document entered is not valid.</string>
    <string name="active_itineraries">Active itineraries</string>
    <string name="list_users">Users</string>
    <string name="reports">Reports</string>
    <string name="reporter_user">Reporter user:</string>
    <string name="details_itinerary">Itinerary Details</string>
    <string name="registration_success">Registration successful.</string>
    <string name="connection_error">No internet connection.</string>
    <string name="major_date_required">You must be an adult to register.</string>
    <string name="remove_user">Remove user</string>
    <string name="user_to_report">User to report</string>
    <string name="object_report">Object of the report</string>
    <string name="report_body">Report body</string>
    <string name="insert_report">Insert report</string>
    <string name="avg_earn">Average earnings: %.2f €</string>
    <string name="doc_not_exists">Document: No documents found.</string>
</resources>