<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 FSC - Five Students of Computer Science
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_outline_home_24px"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_outline_explore_24px"
        android:title="@string/discover"
        app:showAsAction="always" />
    <item
        android:id="@+id/empty_menu_item"
        android:enabled="false"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_outline_favorite_border_24px"
        android:title="@string/wishlist"
        app:showAsAction="always" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_outline_account_circle_24px"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>