<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reportedUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2.5dp"
            android:ems="10"
            android:text="@string/user_to_report"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>

    <EditText
        android:id="@+id/object"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2.5dp"
        android:ems="10"
        android:hint="@string/object_report"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/report_body"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/sendReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/insert_report" />

</LinearLayout>